objects/FinServ__FinancialAccountRole__c.object
<CustomObject>
    <description>Represents the role occupied by a person or organizational entity that is involved with a financial account, such as a beneficiary or trustee.</description>
    <fields>
        <fullName>AW_RoleDOB__c</fullName>
        <description>Date of Birth of the Person Involved</description>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_RoleFirstName__c</fullName>
        <description>This field is used to capture the first name associated with a financial account role</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RoleIdentificationNumber__c</fullName>
        <description>Identification of the Role</description>
        <label>Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RoleInitials__c</fullName>
        <description>Initials of the person who is assigned the role</description>
        <label>Initials</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RoleLastName__c</fullName>
        <description>This field stores the last name associated with a financial account role</description>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RoleTitle__c</fullName>
        <description>This field represents the title or role associated with a financial account role</description>
        <label>Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BALANCE__c</fullName>
        <formula>FinServ__FinancialAccount__r.FinServ__Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BALANCE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_ConsultantCode__c</fullName>
        <description>Used for integration to populate Consultant Code from source systems (Compass/Lifestyle)</description>
        <label>Consultant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CountryOfCitizenship__c</fullName>
        <description>Used for integration to populate Country of Citizenship from source systems (Compass/Lifestyle)</description>
        <label>Country of Citizenship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CountryOfIncorporation__c</fullName>
        <description>Used for integration to populate Country of Incorporation from source systems (Compass/Lifestyle)</description>
        <label>Country of Incorporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CountryOfIssue__c</fullName>
        <description>Used for integration to populate Country of Issue from source systems (Compass/Lifestyle)</description>
        <label>Country of Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_DateOfIncorporation__c</fullName>
        <description>Used for integration to populate Date of Incorporation from source systems (Compass/Lifestyle)</description>
        <label>Date of Incorporation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_Email__c</fullName>
        <description>Used for integration to populate Email from source systems (Compass/Lifestyle)</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_ExpiryDate__c</fullName>
        <description>Used for integration to populate Expiry Date from source systems (Compass/Lifestyle)</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_FifthName__c</fullName>
        <description>Used for integration to populate Fifth Name from source systems (Compass/Lifestyle)</description>
        <label>Fifth Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FourthName__c</fullName>
        <description>Used for integration to populate Fourth Name from source systems (Compass/Lifestyle)</description>
        <label>Fourth Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Gender__c</fullName>
        <description>Used for integration to populate Gender from source systems (Compass/Lifestyle)</description>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_IssueDate__c</fullName>
        <description>Used for integration to populate Issue Date from source systems (Compass/Lifestyle)</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_MaritalStatus__c</fullName>
        <description>Used for integration to populate Marital Status from source systems (Compass/Lifestyle)</description>
        <label>Marital Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Mobile__c</fullName>
        <description>Used for integration to populate Mobile Number from source systems (Compass/Lifestyle)</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_OccupationRiskCategory__c</fullName>
        <description>Used for integration to populate Occupation Risk Category from source systems (Compass/Lifestyle)</description>
        <label>Occupation Risk Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Occupation__c</fullName>
        <description>Used for integration to populate Occupation from source systems (Compass/Lifestyle)</description>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_OrganisationType__c</fullName>
        <description>Used for integration to populate Organisation Type from source systems (Compass/Lifestyle)</description>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>FOR_CO</fullName>
                </value>
                <value>
                    <fullName>FOR_TRUST</fullName>
                </value>
                <value>
                    <fullName>INC</fullName>
                </value>
                <value>
                    <fullName>NPC</fullName>
                </value>
                <value>
                    <fullName>NPO</fullName>
                </value>
                <value>
                    <fullName>PUB_CO</fullName>
                </value>
                <value>
                    <fullName>PVT_CO</fullName>
                </value>
                <value>
                    <fullName>SOC</fullName>
                </value>
                <value>
                    <fullName>TRUST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_OrganizationName__c</fullName>
        <description>Used for integration to populate Organization Name from source systems (Compass/Lifestyle)</description>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PDBID__c</fullName>
        <description>Used for integration to populate the PDB Entity ID from source systems (Compass/Lifestyle).</description>
        <label>PDB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PassportNumber__c</fullName>
        <description>Used for integration to populate Passport Number from source systems (Compass/Lifestyle)</description>
        <label>Passport Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PercentageSplit__c</fullName>
        <description>Used for integration to populate Percentage Split from source systems (Compass/Lifestyle)</description>
        <label>Percentage Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_PhoneNumber__c</fullName>
        <description>Used for integration to populate Roles Phone Number from source systems (Compass/Lifestyle)</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_Race__c</fullName>
        <description>Used for integration to populate Race from source systems (Compass/Lifestyle)</description>
        <label>Race</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RegistrationNumber__c</fullName>
        <description>Used for integration to populate Company Registration Number from source systems (Compass/Lifestyle)</description>
        <label>Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RelationshipToLifeAssured__c</fullName>
        <description>Used for integration to populate Relationship to Owner from source systems (Compass/Lifestyle)</description>
        <label>Relationship to Life Assured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted Brother</fullName>
                </value>
                <value>
                    <fullName>Adopted Daughter</fullName>
                </value>
                <value>
                    <fullName>Adopted Mother</fullName>
                </value>
                <value>
                    <fullName>Adopted Sister</fullName>
                </value>
                <value>
                    <fullName>Adopted Son</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Brother-In-Law</fullName>
                </value>
                <value>
                    <fullName>Business Associate</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Co-Director</fullName>
                </value>
                <value>
                    <fullName>Co-Shareholder</fullName>
                </value>
                <value>
                    <fullName>Common Law Spouse</fullName>
                </value>
                <value>
                    <fullName>Common-Law-Husband</fullName>
                </value>
                <value>
                    <fullName>Common-Law-Wife</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Creditor</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Daughter-In-Law</fullName>
                </value>
                <value>
                    <fullName>Debtor</fullName>
                </value>
                <value>
                    <fullName>Domestic Helper</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Ex-Husband</fullName>
                </value>
                <value>
                    <fullName>Ex-Wife</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Father-In-Law</fullName>
                </value>
                <value>
                    <fullName>Fiance (Male)</fullName>
                </value>
                <value>
                    <fullName>Fiancee (Female)</fullName>
                </value>
                <value>
                    <fullName>Foster Daughter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_RelationshipToOwner__c</fullName>
        <description>Used for integration to populate Relationship from source systems (Compass/Lifestyle)</description>
        <label>Relationship To Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted Brother</fullName>
                </value>
                <value>
                    <fullName>Adopted Daughter</fullName>
                </value>
                <value>
                    <fullName>Adopted Mother</fullName>
                </value>
                <value>
                    <fullName>Adopted Sister</fullName>
                </value>
                <value>
                    <fullName>Adopted Son</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Brother-In-Law</fullName>
                </value>
                <value>
                    <fullName>Business Associate</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Co-Director</fullName>
                </value>
                <value>
                    <fullName>Co-Shareholder</fullName>
                </value>
                <value>
                    <fullName>Common Law Spouse</fullName>
                </value>
                <value>
                    <fullName>Common-Law-Husband</fullName>
                </value>
                <value>
                    <fullName>Common-Law-Wife</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Creditor</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Daughter-In-Law</fullName>
                </value>
                <value>
                    <fullName>Debtor</fullName>
                </value>
                <value>
                    <fullName>Domestic Helper</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Executor</fullName>
                </value>
                <value>
                    <fullName>Ex-Husband</fullName>
                </value>
                <value>
                    <fullName>Ex-Wife</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Father-In-Law</fullName>
                </value>
                <value>
                    <fullName>Fiance (Male)</fullName>
                </value>
                <value>
                    <fullName>Fiancee (Female)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_Relationship__c</fullName>
        <description>Used for integration to populate Relationship from source systems (Compass/Lifestyle)</description>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_SecondName__c</fullName>
        <description>Used for integration to populate Second Name from source systems (Compass/Lifestyle)</description>
        <label>Second Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Suffix__c</fullName>
        <description>Used for integration to populate Company Suffix from source systems (Compass/Lifestyle)</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>(PTY) LTD</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>INC</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>NPC</fullName>
                </value>
                <value>
                    <fullName>SOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_TaxNumber__c</fullName>
        <description>Used for integration to populate Tax Number from source systems (Compass/Lifestyle)</description>
        <label>Tax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ThirdName__c</fullName>
        <description>Used for integration to populate Third Name from source systems (Compass/Lifestyle)</description>
        <label>Third Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_WeddingAnniversary__c</fullName>
        <description>Used for integration to populate Marriage Date from source systems (Compass/Lifestyle)</description>
        <label>Wedding Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_WorkPhoneNumber__c</fullName>
        <description>Used for integration to populate Work Number from source systems (Compass/Lifestyle)</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DATE_OPENED__c</fullName>
        <formula>FinServ__FinancialAccount__r.FinServ__OpenDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DATE OPENED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINANCIAL_ACCOUNT_NAME__c</fullName>
        <formula>FinServ__FinancialAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FINANCIAL ACCOUNT NAME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the organizational entity or person currently occupies this role.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this field is read-only or editable.</description>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__EndDate__c</fullName>
        <description>End date when the organizational entity or person relinquished this role.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <description>Financial account that this role is related to.</description>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Financial Account Roles</relationshipLabel>
        <relationshipName>FinancialAccountRoles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the organizational entity that is involved with the financial account.</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Roles</relationshipLabel>
        <relationshipName>FinancialAccountRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the person who is involved with the financial account.</description>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Account Roles</relationshipLabel>
        <relationshipName>FinancialAccountRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Role__c</fullName>
        <description>Role that describes how the organizational entity or person is involved with the financial account.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Absolute Cessionary</fullName>
                </value>
                <value>
                    <fullName>Antenuptial Cession</fullName>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Child Life Assured</fullName>
                </value>
                <value>
                    <fullName>Collateral Cessionary</fullName>
                </value>
                <value>
                    <fullName>Educator - Child Life Assured</fullName>
                </value>
                <value>
                    <fullName>Extended Life</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                    <label>Financial Advisor</label>
                </value>
                <value>
                    <fullName>Joint Life</fullName>
                </value>
                <value>
                    <fullName>Joint Owner</fullName>
                </value>
                <value>
                    <fullName>Life Assured</fullName>
                </value>
                <value>
                    <fullName>Main Life</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other Cessionary</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Payee</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Payor</fullName>
                </value>
                <value>
                    <fullName>Policy Holder</fullName>
                </value>
                <value>
                    <fullName>Primary Life Assured</fullName>
                </value>
                <value>
                    <fullName>Primary Life Assured Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Secondary Life Assured</fullName>
                </value>
                <value>
                    <fullName>Secondary Life Assured Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StartDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Start date when the organizational entity or person assumed this role.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HELD_AWAY__c</fullName>
        <formula>FinServ__FinancialAccount__r.FinServ__HeldAway__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HELD AWAY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <formula>FinServ__FinancialAccount__r.FinServ__OwnerType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PartyName__c</fullName>
        <description>Used to display concatenate string First Name + Last Name or Organisation name on compact layout</description>
        <formula>IF(ISBLANK(AW_RoleFirstName__c),CMN_OrganizationName__c ,AW_RoleFirstName__c &amp; &quot; &quot; &amp; AW_RoleLastName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the associated consultant code.</description>
        <label>Consultant Code</label>
        <referenceTo>SC_ConsultantCodes__c</referenceTo>
        <relationshipLabel>Financial Account Roles</relationshipLabel>
        <relationshipName>Financial_Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantStatus__c</fullName>
        <description>Indicates the agreement status of associated consultant.</description>
        <label>Consultant Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(FinServ__FinancialAccount__r.FinServ__FinancialAccountType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Financial Account Role</label>
    <nameField>
        <displayFormat>FAR-{000000000}</displayFormat>
        <label>Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Roles</pluralLabel>
    <recordTypes>
        <fullName>AW_LibertyFinancialAccountRole</fullName>
        <active>true</active>
        <description>Record type to be used for Integration with Compass, Lifestyle and Ilanga</description>
        <label>Liberty Financial Account Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__AccountRole</fullName>
        <active>true</active>
        <description>Role occupied by an organizational entity, such as a corporation or LLC</description>
        <label>Account Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__ContactRole</fullName>
        <active>true</active>
        <description>Role occupied by a person</description>
        <label>Contact Role</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FinServ__CannotCreateInactiveRecord</fullName>
        <active>true</active>
        <description>Ensures that a record cannot be created as Inactive</description>
        <errorConditionFormula>ISBLANK(FinServ__EndDate__c) &amp;&amp; NOT(FinServ__Active__c)</errorConditionFormula>
        <errorMessage>A Financial Account Role cannot be created as Inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__FARCannotBeModified</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(ISCHANGED(FinServ__RelatedAccount__c),ISCHANGED(FinServ__RelatedContact__c),ISCHANGED(FinServ__FinancialAccount__c),ISCHANGED(FinServ__Role__c)),NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>This record cannot be edited. To update role information, you can deactivate this record and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__InactiveFARCannotBeEdited</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE(FinServ__Active__c) == false,NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Inactive record cannot be edited. To update FAR, you can create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__InactiveRecordCannotBeReactivated</fullName>
        <active>true</active>
        <description>Ensures that inactive records cannot be reactivated.</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>Inactive Financial Roles cannot be reactivated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__OwnershipRolesCannotBeDeactivated</fullName>
        <active>true</active>
        <description>Enforces that changes to primary roles cannot be deactivated.</description>
        <errorConditionFormula>(FinServ__Editable__c == false) &amp;&amp;
        (ISCHANGED( FinServ__Active__c ))</errorConditionFormula>
        <errorMessage>This record cannot be deactivated because ownership can be updated on the financial account only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__OwnershipRolesCannotBeModified</fullName>
        <active>true</active>
        <description>Enforces that changes to Related Contact, Related Account, Role fields are not allowed when fields are non editable.</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>This record cannot be modified because ownership can be specified on the financial account only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__RelatedAccountOrContactRequired</fullName>
        <active>true</active>
        <description>Enforce selection of the correct lookup relationship: either a Related Account or Related Contact.</description>
        <errorConditionFormula>ISBLANK(FinServ__RelatedContact__c) &amp;&amp; ISBLANK( FinServ__RelatedAccount__c)</errorConditionFormula>
        <errorMessage>Either Related Account or Related Contact is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__RoleIsMandatory</fullName>
        <active>true</active>
        <description>Enforces that the Role__c field is mandatory when a FinancialAccountRole__c object is created.</description>
        <errorConditionFormula>ISBLANK(TEXT(FinServ__Role__c))</errorConditionFormula>
        <errorMessage>Role is required.</errorMessage>
    </validationRules>
</CustomObject>